# miniapp

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  build.sh
baseline/: CMakeLists.txt  baseline.cpp  baseline.h  local.cpp  miniapp.c
cuda/basic/: CMakeLists.txt  basic.cu
cuda/common/include/: common.hpp
cuda/enumerate/: CMakeLists.txt  enumerate.cu
cuda/mini/: 19.2.22.1_exclusive_access.cu  7.22.3.2_inclusive_plus.cu  test_print_thread.cu  test_shuffle.cu  test_sync_return.cu
cuda/spotfind/: CMakeLists.txt  spotfind.cu  spotfind_66ec94.ncu-rep  spotfind_8c6869.ncu-rep
cuda/spotfind_naive/: CMakeLists.txt  spotfind_naive.cu
cuda/spotfinder/: CMakeLists.txt  pia.recipe  pipetest.py  service.py  shmread.hpp  spotfinder.cc  spotfinder.cu  spotfinder.h  test_service.py  watch_dc.py  watch_shm.py
cuda/spotfinder/kernels/: erosion.cu  erosion.hu
cuda/spotfinder/tests/: dispersion_extended.sh  pipetest.py  pipetest.sh  res_comparison.sh  test_service.py
dpcpp/: CMakeLists.txt  Dockerfile  ancillary.cc  load.cc
dpcpp/common/include/: common.hpp
dpcpp/enumerate/: CMakeLists.txt  enumerate.cc
dpcpp/init/: CMakeLists.txt  init.cc
dpcpp/initial/: CMakeLists.txt  load.cc
dpcpp/mini_stream_test/: CMakeLists.txt  ministream.cc
dpcpp/plumbing/: CMakeLists.txt  kernel.cc  kernel.hpp  plumbing.cc
dpcpp/reduced/: CMakeLists.txt  reduced.cc
dpcpp/stream_test/: CMakeLists.txt  streaming.cc
dpcpp/zeros/: CMakeLists.txt  load.cc
h5read/: CMakeLists.txt
h5read/include/: h5read.h
h5read/src/: h5read.c  h5read.cc
h5read_rust/: Cargo.toml
h5read_rust/src/: lib.rs
